--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
        <p><span data-actor="erwin">Erwin: Yes we are.</span></p>
        <p><span data-actor="soldier">Soldier: And since we're dying anyways you're saying it's better to die if we're at least fighting?</span></p>
        <p><span data-actor="erwin">Erwin: I am</span></p>
-       <p><span data-actor="soldier">Soldier: But wait... If we'll die anyway then who cares what we do? We can just disobey your orders and it wouldn't mean athing would it?</span></p>
+       <p><span data-actor="soldier 2">Soldier 2: But wait... If we'll die anyway then who cares what we do? We can just disobey your orders and it wouldn't mean a thing would it?</span></p>
        <p><span data-actor="erwin">Erwin:Yes you're precisely right. Every hope, dream, or moment of hapiness. Everything that you thought had meaning; None of it matters as you lie bleeding out on the battlefield.
         We all die. But does that mean our lives are meaningless? Would you say the same about our slayed comrades? Were their lives meaningless? They were not! Their memory serve as an example to us all! 
         The courageous fallen! The anguished fallen! Their lives have meaning because we, the living, refuse to forget them! And as we ride to certain death, we trust our successors to do the same for us! 
